--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -71,6 +71,12 @@ body {
 
   animation-name: moveInLeft;
   animation-duration: 1s;
+  animation-timing-function: ease-out;
+
+  /*  
+  animation-delay: 3s;
+  animation-iteration-count: 3;
+  */
 }
 
 .heading-primary-sub {
