--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -121,3 +121,17 @@ body {
     transform: translate(0);
   }
 }
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
+}
