--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -138,11 +138,15 @@ body {
 
 .btn:hover {
   transform: translateY(-3px);
+
+  /* x-y-blur-color */
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 /* hover ile alakası yok bunun, hover 3px yukarı çıkıyor basınca -1px daha çıkıyor diye düşünme hoverdan alakasız. .btn:link in kendisi ile bağlantılı. ilk durum orijin ise hover 3px yukarı çıkartırken active 1px yukarı çıkartıyor */
 .btn:active {
   transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 
