--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -125,6 +125,18 @@ body {
   }
 }
 
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -178,4 +190,12 @@ body {
 .btn:hover::after {
   transform: scaleX(1.4) scaleY(1.6);
   opacity: 0;
+}
+
+.btn-animated {
+  /* animation name - duration time - animation timing function - animation delay */
+  animation: moveInBottom 0.5s ease-out 0.75s;
+
+  /* animasyon başlamadan uyguluyor keyframes deki efektleri */
+  animation-fill-mode: backwards;
 }
