--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -46,17 +46,17 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   top: 4rem;
   left: 4rem;
 }
 
-.logo {
+.header__logo {
   height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
   position: absolute;
   /* top and left relation to the parent element */
   top: 40%;
@@ -76,7 +76,7 @@ body {
   margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   display: block;
   font-size: 6rem;
   font-weight: 400;
@@ -92,7 +92,7 @@ body {
   */
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
@@ -172,7 +172,7 @@ body {
 }
 
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -192,7 +192,7 @@ body {
   transition: all 0.4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -201,7 +201,7 @@ body {
   opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
   /* animation name - duration time - animation timing function - animation delay */
   animation: moveInBottom 0.5s ease-out 0.75s;
 
